# soupawhisper

./: .gitignore  Makefile  README.md  config.example.ini  dictate.py  dictate_tests.py  install.sh  pyproject.toml
