[project]
name = "soupawhisper"
version = "0.1.0"
description = "Voice dictation for Linux using faster-whisper"
authors = [
    {name = "Kyle", email = "kyle@ksred.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "faster-whisper>=1.0.0",
    "pynput>=1.7.6",
    "webrtcvad>=2.0.10",
    "pyaudio>=0.2.0",
]
optional-dependencies.dev = [
    "pytest>=8.0.0",
    "pytest-timeout>=2.0.0"
]
keywords = ["whisper", "dictation", "voice", "transcription", "speech-to-text"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

[tool.pytest.ini_options]
python_files = ["*_test.py", "*_tests.py"]
markers = [
    "timeout: mark test to timeout after specified seconds (deselect with '-m \"not timeout\"')",
]
addopts = "--timeout=2"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["dictate"]
